@@ -6,3 +6,5 @@ Clipboard is supported (thanks to Uwe).
 
 Keys are recorded by their symbols with the --symbolic switch, provided you
 have the X11::Keysyms module.
+
+After pressing Control twice, you can show the last reference image with 'd'.
